Change secret source

--- a/gitops/applications/base/rook-ceph/external-secrets-sync.yaml
+++ b/gitops/applications/base/rook-ceph/external-secrets-sync.yaml
@@ -14,7 +14,7 @@ spec:
         - /bin/sh
         - -c
         - |
-          kubectl --kubeconfig=/etc/sc-cluster-kubeconfig/value get secret ceph-external-cluster-secret -n rook-ceph-external -o yaml | kubectl apply -f -
+          kubectl --kubeconfig=/etc/sc-cluster-kubeconfig/value get secret ceph-external-cluster-secret -n rook-ceph -o yaml | kubectl apply -f -
         volumeMounts:
         - name: sc-cluster-kubeconfig
           mountPath: /etc/sc-cluster-kubeconfig
