adding cc ext secrets job

--- a/gitops/applications/base/rook-ceph/external-secrets-sync.yaml
+++ b/gitops/applications/base/rook-ceph/external-secrets-sync.yaml
@@ -1,3 +1,101 @@
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: ext-secret-sc
+  namespace: rook-ceph-external
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: Role
+metadata:
+  namespace: rook-ceph-external
+  name: eso-store-role
+rules:
+  - apiGroups:
+      - ""
+    resources:
+      - secrets
+    verbs:
+      - get
+      - list
+      - watch
+  - apiGroups:
+      - authorization.k8s.io
+    resources:
+      - selfsubjectrulesreviews
+    verbs:
+      - create
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: eso-store-role-binding
+  namespace: rook-ceph-external
+subjects:
+  - kind: ServiceAccount
+    name: ext-secret-sc
+    namespace: rook-ceph-external
+roleRef:
+  kind: Role
+  name: eso-store-role
+  apiGroup: rbac.authorization.k8s.io
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: Role
+metadata:
+  name: viewer
+  namespace: rook-ceph-external
+rules:
+  - apiGroups:
+      - ""
+    resources:
+      - pods
+      - pods/logs
+      - secrets
+    verbs:
+      - get
+      - list
+      - watch
+---
+apiVersion: external-secrets.io/v1beta1
+kind: SecretStore
+metadata:
+  name: sc-secret-store
+  namespace: rook-ceph-external
+spec:
+  provider:
+    kubernetes:
+      auth:
+        serviceAccount:
+          name: "ext-secret-sc"
+      remoteNamespace: sc-cluster
+      server:
+        caProvider:
+          type: ConfigMap
+          name: kube-root-ca.crt
+          key: ca.crt
+---
+apiVersion: external-secrets.io/v1beta1
+kind: ExternalSecret
+metadata:
+  name: sc-kubeconfig
+  namespace: rook-ceph-external
+spec:
+  refreshInterval: 1m
+  secretStoreRef:
+    kind: SecretStore
+    name: sc-secret-store
+  target:
+    name: sc-kubeconfig
+    creationPolicy: Owner
+    template:
+      data:
+        config: "{{ .value }}"
+  data:
+    - secretKey: value
+      remoteRef:
+        key: sc-kubeconfig
+        property: value
+---
 apiVersion: batch/v1
 kind: Job
 metadata:
@@ -14,7 +112,9 @@ spec:
         - /bin/sh
         - -c
         - |
-          kubectl --kubeconfig=/etc/sc-cluster-kubeconfig/value get secret ceph-external-cluster-secret -n rook-ceph -o yaml | kubectl apply -f -
+          kubectl --kubeconfig=/etc/sc-cluster-kubeconfig/config get secret ceph-external-cluster-secret -n rook-ceph -o yaml \
+            | sed 's/namespace: rook-ceph$/namespace: rook-ceph-external/'  > /tmp/ceph-secrets.yaml && \
+          kubectl --namespace=rook-ceph-external apply -f /tmp/ceph-secrets.yaml
         volumeMounts:
         - name: sc-cluster-kubeconfig
           mountPath: /etc/sc-cluster-kubeconfig
