--- a/gitops/argo-apps/overlays/local/root/kustomization.yaml
+++ b/gitops/argo-apps/overlays/local/root/kustomization.yaml
@@ -4,7 +4,7 @@ kind: Kustomization
 resources:
   # utils
   - ../../../base/argocd-helm.yaml
-  # - ../../../base/rook-ceph.yaml
+  - ../../../base/rook-ceph.yaml
   - ../../../base/external-secrets.yaml
   - ../../../base/reflector.yaml
   - ../../../base/reloader.yaml
