--- a/gitops/applications/base/capi/cluster-deploy.yaml
+++ b/gitops/applications/base/capi/cluster-deploy.yaml
@@ -629,7 +629,7 @@ metadata:
 spec:
   clusterSelector:
     matchLabels:
-      guestbook: enabled
+      argoCDChart: enabled
   repoURL: https://argoproj.github.io/argo-helm
   chartName: argocd-apps
   options:
