--- a/gitops/applications/base/capi/cluster-deploy.yaml
+++ b/gitops/applications/base/capi/cluster-deploy.yaml
@@ -626,12 +626,14 @@ apiVersion: addons.cluster.x-k8s.io/v1alpha1
 kind: HelmChartProxy
 metadata:
   name: storage-cluster-root-app
+  namespace: ${ARGOCD_ENV_capi_cluster_namespace}
 spec:
   clusterSelector:
     matchLabels:
       argoCDChart: enabled
   repoURL: https://argoproj.github.io/argo-helm
   chartName: argocd-apps
+  namespace: "argocd"
   options:
     waitForJobs: true
     wait: true
