--- a/gitops/argo-apps/base/capi.yaml
+++ b/gitops/argo-apps/base/capi.yaml
@@ -156,3 +156,9 @@ spec:
 
         - name: "capi_cluster_storage_name"
           value: "${ARGOCD_ENV_utils_capi_capi_cluster_storage_name}"
+
+        - name: "sc_root_application_gitrepo_tag"
+          value: "${ARGOCD_ENV_utils_application_gitrepo_tag}"
+
+        - name: "sc_root_argocd_repo_url"
+          value: "${ARGOCD_ENV_argocd_repo_url}"
