--- a/gitops/applications/base/capi/cluster-deploy.yaml
+++ b/gitops/applications/base/capi/cluster-deploy.yaml
@@ -626,53 +626,53 @@ spec:
               subPath: envsubst
               mountPath: /usr/local/bin/envsubst
 ---
-apiVersion: addons.cluster.x-k8s.io/v1alpha1
-kind: HelmChartProxy
-metadata:
-  name: storage-cluster-root-app
-  namespace: ${ARGOCD_ENV_capi_cluster_namespace}
-spec:
-  clusterSelector:
-    matchLabels:
-      argoCDChart: enabled
-  repoURL: https://argoproj.github.io/argo-helm
-  chartName: argocd-apps
-  namespace: "argocd"
-  options:
-    waitForJobs: true
-    wait: true
-    timeout: 5m
-    install:
-      createNamespace: true
-  valuesTemplate: |
-    applications:
-      storage-cluster-deployer:
-        namespace: argocd
-        finalizers:
-          - resources-finalizer.argocd.argoproj.io
-        project: default
-        syncPolicy:
-          automated:
-            prune: true
-            selfHeal: true
-          retry:
-            limit: 60
-            backoff:
-              duration: 10s
-              maxDuration: 1m0s
-              factor: 2
-          syncOptions:
-            - CreateNamespace=true
-            - PrunePropagationPolicy=foreground
-            - PruneLast=true
-        sources:
-          - repoURL: ${ARGOCD_ENV_sc_root_argocd_repo_url}
-            targetRevision: ${ARGOCD_ENV_sc_root_application_gitrepo_tag}
-            path: gitops/argo-apps/overlays/local/storage-cluster
-            plugin:
-              name: envsubstappofapp
-              env: []
+# apiVersion: addons.cluster.x-k8s.io/v1alpha1
+# kind: HelmChartProxy
+# metadata:
+#   name: storage-cluster-root-app
+#   namespace: ${ARGOCD_ENV_capi_cluster_namespace}
+# spec:
+#   clusterSelector:
+#     matchLabels:
+#       argoCDChart: enabled
+#   repoURL: https://argoproj.github.io/argo-helm
+#   chartName: argocd-apps
+#   namespace: "argocd"
+#   options:
+#     waitForJobs: true
+#     wait: true
+#     timeout: 5m
+#     install:
+#       createNamespace: true
+#   valuesTemplate: |
+#     applications:
+#       storage-cluster-deployer:
+#         namespace: argocd
+#         finalizers:
+#           - resources-finalizer.argocd.argoproj.io
+#         project: default
+#         syncPolicy:
+#           automated:
+#             prune: true
+#             selfHeal: true
+#           retry:
+#             limit: 60
+#             backoff:
+#               duration: 10s
+#               maxDuration: 1m0s
+#               factor: 2
+#           syncOptions:
+#             - CreateNamespace=true
+#             - PrunePropagationPolicy=foreground
+#             - PruneLast=true
+#         sources:
+#           - repoURL: ${ARGOCD_ENV_sc_root_argocd_repo_url}
+#             targetRevision: ${ARGOCD_ENV_sc_root_application_gitrepo_tag}
+#             path: gitops/argo-apps/overlays/local/storage-cluster
+#             plugin:
+#               name: envsubstappofapp
+#               env: []
 
-        destination:
-          server: "https://kubernetes.default.svc"
-          namespace: argocd
+#         destination:
+#           server: "https://kubernetes.default.svc"
+#           namespace: argocd
