--- a/gitops/applications/base/rook-ceph/kustomization.yaml
+++ b/gitops/applications/base/rook-ceph/kustomization.yaml
@@ -2,6 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - rook-ceph-namespace.yaml
+  - rbac.yaml
   - external-secrets-sync.yaml
   - rook-ceph-consumer-job.yaml
 
