Use Job restartPolicy Never

--- a/gitops/applications/base/rook-ceph/external-secrets-sync.yaml
+++ b/gitops/applications/base/rook-ceph/external-secrets-sync.yaml
@@ -104,7 +104,7 @@ metadata:
 spec:
   template:
     spec:
-      restartPolicy: OnFailure
+      restartPolicy: Never
       containers:
       - name: kubectl
         image: bitnami/kubectl:latest
