--- a/gitops/applications/base/sc-rook-ceph-post-config/rook-ceph-ext-secrets-job.yaml
+++ b/gitops/applications/base/sc-rook-ceph-post-config/rook-ceph-ext-secrets-job.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   template:
     spec:
-      restartPolicy: OnFailure
+      restartPolicy: Never
       dnsPolicy: ClusterFirstWithHostNet
       serviceAccountName: ceph-job-sa
       containers:
