--- a/gitops/applications/base/rook-ceph/kustomization.yaml
+++ b/gitops/applications/base/rook-ceph/kustomization.yaml
@@ -3,8 +3,8 @@ kind: Kustomization
 resources:
   - rook-ceph-namespace.yaml
   - rbac.yaml
-  - external-secrets-sync.yaml
-  - rook-ceph-consumer-job.yaml
+  - external-secrets.yaml
+  - sync-ceph-secrets-job.yaml
 
 helmCharts:
   - name: rook-ceph
