--- a/gitops/applications/base/monitoring-post-config/dashboards-infra.yaml
+++ b/gitops/applications/base/monitoring-post-config/dashboards-infra.yaml
@@ -35,3 +35,17 @@ spec:
       dashboards: "grafana"
   url: "https://raw.githubusercontent.com/adinhodovic/argo-cd-mixin/refs/heads/main/dashboards_out/argo-cd-operational-overview.json"
 ---
+apiVersion: grafana.integreatly.org/v1beta1
+kind: GrafanaDashboard
+metadata:
+  name: "netbird-management"
+spec:
+  folder: infra
+  # datasources:
+  #   - inputName: "DS_PROMETHEUS"
+  #     datasourceName: "${ARGOCD_ENV_dashboard_datasource_name}" 
+  instanceSelector:
+    matchLabels:
+      dashboards: "grafana"
+  url: "https://raw.githubusercontent.com/mojaloop/iac-modules/${ARGOCD_ENV_monitoring_application_gitrepo_tag}/assets/grafana-dashboards/netbird/management.json"
+---
