--- a/gitops/applications/base/capi/cluster-deploy.yaml
+++ b/gitops/applications/base/capi/cluster-deploy.yaml
@@ -454,7 +454,7 @@ spec:
               hs = {}
               hs.status = "Progressing"
               hs.message = ""
-                if obj.status ~= nil then
+              if obj.status ~= nil then
                 local status = obj.status
                 if status.conditions ~= nil then
                   for i, condition in ipairs(status.conditions) do
@@ -478,6 +478,321 @@ spec:
                 end
               end
               return hs
+          cert-manager.io/ClusterIssuer:
+            health.lua: |
+              local hs = {}
+              if obj.status ~= nil then
+                if obj.status.conditions ~= nil then
+                  for i, condition in ipairs(obj.status.conditions) do
+                    if condition.type == "Ready" and condition.status == "False" then
+                      hs.status = "Degraded"
+                      hs.message = condition.message
+                      return hs
+                    end
+                    if condition.type == "Ready" and condition.status == "True" then
+                      hs.status = "Healthy"
+                      hs.message = condition.message
+                      return hs
+                    end
+                  end
+                end
+              end
+
+              hs.status = "Progressing"
+              hs.message = "Initializing ClusterIssuer"
+              return hs
+          cert-manager.io/Certificate:
+            health.lua: |
+              local hs = {}
+              if obj.status ~= nil then
+                if obj.status.conditions ~= nil then
+
+                  -- Always Handle Issuing First to ensure consistent behaviour
+                  for i, condition in ipairs(obj.status.conditions) do
+                    if condition.type == "Issuing" and condition.status == "True" then
+                      hs.status = "Progressing"
+                      hs.message = condition.message
+                      return hs
+                    end
+                  end
+
+                  for i, condition in ipairs(obj.status.conditions) do
+                    if condition.type == "Ready" and condition.status == "False" then
+                      hs.status = "Degraded"
+                      hs.message = condition.message
+                      return hs
+                    end
+                    if condition.type == "Ready" and condition.status == "True" then
+                      hs.status = "Healthy"
+                      hs.message = condition.message
+                      return hs
+                    end
+                  end
+                end
+              end
+
+              hs.status = "Progressing"
+              hs.message = "Waiting for certificate"
+              return hs
+          redhatcop.redhat.io/VaultSecret:
+            health.lua: |
+              hs = {}
+              if obj.status ~= nil then
+                if obj.status.conditions ~= nil then
+                  for i, condition in ipairs(obj.status.conditions) do
+                    if condition.type == "ReconcileSuccessful" and condition.status == "False" then
+                      hs.status = "Degraded"
+                      hs.message = condition.message
+                      return hs
+                    end
+                    if condition.type == "ReconcileSuccessful" and condition.status == "True" then
+                      hs.status = "Healthy"
+                      hs.message = condition.message
+                      return hs
+                    end
+                  end
+                end
+              end
+
+              hs.status = "Progressing"
+              hs.message = "Waiting for VaultSecret"
+              return hs
+
+          redhatcop.redhat.io/KubernetesAuthEngineRole:
+            health.lua: |
+              hs = {}
+              if obj.status ~= nil then
+                if obj.status.conditions ~= nil then
+                  for i, condition in ipairs(obj.status.conditions) do
+                    if condition.type == "ReconcileSuccessful" and condition.status == "False" then
+                      hs.status = "Degraded"
+                      hs.message = condition.message
+                      return hs
+                    end
+                    if condition.type == "ReconcileSuccessful" and condition.status == "True" then
+                      hs.status = "Healthy"
+                      hs.message = condition.message
+                      return hs
+                    end
+                  end
+                end
+              end
+
+              hs.status = "Progressing"
+              hs.message = "Waiting for KubernetesAuthEngineRole"
+              return hs
+
+          ceph.rook.io/CephBlockPool:
+            health.lua: |
+              hs = {}
+              if obj.status ~= nil then
+                if obj.status.phase == "Ready" then
+                  hs.status = "Healthy"
+                  hs.message = "CephBlockPool Ready"
+                  return hs
+                end
+              end
+              hs.status = "Progressing"
+              hs.message = "Waiting for CephBlockPool"
+              return hs
+          external-secrets.io/ExternalSecret:
+            health.lua: |
+              local hs = {}
+              if obj.status ~= nil then
+                if obj.status.conditions ~= nil then
+                  for i, condition in ipairs(obj.status.conditions) do
+                    if condition.type == "Ready" and condition.status == "False" then
+                      hs.status = "Degraded"
+                      hs.message = condition.message
+                      return hs
+                    end
+                    if condition.type == "Ready" and condition.status == "True" then
+                      hs.status = "Healthy"
+                      hs.message = condition.message
+                      return hs
+                    end
+                  end
+                end
+              end
+              hs.status = "Progressing"
+              hs.message = "Waiting for ExternalSecret"
+              return hs
+          external-secrets.io/ClusterSecretStore:
+            health.lua: |
+              local hs = {}
+              if obj.status ~= nil then
+                if obj.status.conditions ~= nil then
+                  for i, condition in ipairs(obj.status.conditions) do
+                    if condition.type == "Ready" and condition.status == "False" then
+                      hs.status = "Degraded"
+                      hs.message = condition.message
+                      return hs
+                    end
+                    if condition.type == "Ready" and condition.status == "True" then
+                      hs.status = "Healthy"
+                      hs.message = condition.message
+                      return hs
+                    end
+                  end
+                end
+              end
+              hs.status = "Progressing"
+              hs.message = "Waiting for ClusterSecretStore"
+              return hs
+
+          external-secrets.io/SecretStore:
+            health.lua: |
+              local hs = {}
+              if obj.status ~= nil then
+                if obj.status.conditions ~= nil then
+                  for i, condition in ipairs(obj.status.conditions) do
+                    if condition.type == "Ready" and condition.status == "False" then
+                      hs.status = "Degraded"
+                      hs.message = condition.message
+                      return hs
+                    end
+                    if condition.type == "Ready" and condition.status == "True" then
+                      hs.status = "Healthy"
+                      hs.message = condition.message
+                      return hs
+                    end
+                  end
+                end
+              end
+              hs.status = "Progressing"
+              hs.message = "Waiting for SecretStore"
+              return hs
+
+          "*.upbound.io/*":
+            health.lua: |
+              health_status = {
+                status = "Progressing",
+                message = "Provisioning ..."
+              }
+
+              local function contains (table, val)
+                for i, v in ipairs(table) do
+                  if v == val then
+                    return true
+                  end
+                end
+                return false
+              end
+
+              local has_no_status = {
+                "ProviderConfig",
+                "ProviderConfigUsage"
+              }
+
+              if obj.status == nil or next(obj.status) == nil and contains(has_no_status, obj.kind) then
+                health_status.status = "Healthy"
+                health_status.message = "Resource is up-to-date."
+                return health_status
+              end
+
+              if obj.status == nil or next(obj.status) == nil or obj.status.conditions == nil then
+                if obj.kind == "ProviderConfig" and obj.status.users ~= nil then
+                  health_status.status = "Healthy"
+                  health_status.message = "Resource is in use."
+                  return health_status
+                end
+                return health_status
+              end
+
+              for i, condition in ipairs(obj.status.conditions) do
+                if condition.type == "LastAsyncOperation" then
+                  if condition.status == "False" then
+                    health_status.status = "Degraded"
+                    health_status.message = condition.message
+                    return health_status
+                  end
+                end
+
+                if condition.type == "Synced" then
+                  if condition.status == "False" then
+                    health_status.status = "Degraded"
+                    health_status.message = condition.message
+                    return health_status
+                  end
+                end
+
+                if condition.type == "Ready" then
+                  if condition.status == "True" then
+                    health_status.status = "Healthy"
+                    health_status.message = "Resource is up-to-date."
+                    return health_status
+                  end
+                end
+              end
+
+              return health_status
+
+          "*.crossplane.io/*":
+            health.lua: |
+              health_status = {
+                status = "Progressing",
+                message = "Provisioning ..."
+              }
+
+              local function contains (table, val)
+                for i, v in ipairs(table) do
+                  if v == val then
+                    return true
+                  end
+                end
+                return false
+              end
+
+              local has_no_status = {
+                "Composition",
+                "CompositionRevision",
+                "DeploymentRuntimeConfig",
+                "ControllerConfig",
+                "ProviderConfig",
+                "ProviderConfigUsage"
+              }
+              if obj.status == nil or next(obj.status) == nil and contains(has_no_status, obj.kind) then
+                  health_status.status = "Healthy"
+                  health_status.message = "Resource is up-to-date."
+                return health_status
+              end
+
+              if obj.status == nil or next(obj.status) == nil or obj.status.conditions == nil then
+                if obj.kind == "ProviderConfig" and obj.status.users ~= nil then
+                  health_status.status = "Healthy"
+                  health_status.message = "Resource is in use."
+                  return health_status
+                end
+                return health_status
+              end
+
+              for i, condition in ipairs(obj.status.conditions) do
+                if condition.type == "LastAsyncOperation" then
+                  if condition.status == "False" then
+                    health_status.status = "Degraded"
+                    health_status.message = condition.message
+                    return health_status
+                  end
+                end
+
+                if condition.type == "Synced" then
+                  if condition.status == "False" then
+                    health_status.status = "Degraded"
+                    health_status.message = condition.message
+                    return health_status
+                  end
+                end
+
+                if contains({"Ready", "Healthy", "Offered", "Established"}, condition.type) then
+                  if condition.status == "True" then
+                    health_status.status = "Healthy"
+                    health_status.message = "Resource is up-to-date."
+                    return health_status
+                  end
+                end
+              end
+
+              return health_status
           
 
       params:
