--- a/gitops/applications/base/capi/cluster-deploy.yaml
+++ b/gitops/applications/base/capi/cluster-deploy.yaml
@@ -595,6 +595,21 @@ spec:
               hs.status = "Progressing"
               hs.message = "Waiting for CephBlockPool"
               return hs
+
+          ceph.rook.io/CephObjectStore:
+            health.lua: |
+              hs = {}
+              if obj.status ~= nil then
+                if obj.status.phase == "Ready" then
+                  hs.status = "Healthy"
+                  hs.message = "CephObjectStore Ready"
+                  return hs
+                end
+              end
+              hs.status = "Progressing"
+              hs.message = "Waiting for CephObjectStore"
+              return hs
+              
           external-secrets.io/ExternalSecret:
             health.lua: |
               local hs = {}
