bastion instance size

--- a/terraform/k8s/default-config/cluster-config.yaml
+++ b/terraform/k8s/default-config/cluster-config.yaml
@@ -19,6 +19,7 @@ enable_vault_oidc: true
 enable_grafana_oidc: true
 object_storage_force_destroy_bucket: true #prod should set to false
 bastion_instance_size: t3.micro
+managed_svc_bastion_instance_size: t3.micro
 nodes:
   master-generic:
     master: true
