--- a/gitops/argo-apps/overlays/local/storage-cluster/kustomization.yaml
+++ b/gitops/argo-apps/overlays/local/storage-cluster/kustomization.yaml
@@ -7,9 +7,6 @@ resources:
   - ../../../base/metallb.yaml
   - ../../../base/sc-rook-ceph.yaml
   - ../../../base/sc-rook-ceph-post-config.yaml
-  # - ../../../base/cert-manager.yaml
-  # - ../../../base/crossplane.yaml
-  #  - ../../../base/percona-operator.yaml
+  - ../../../base/cert-manager.yaml
+  - ../../../base/percona-operator.yaml
   - ../../../base/base-monitoring.yaml
-  # xplane database config
-  #- ../../../base/xplane-provider-config.yaml
