--- a/gitops/applications/base/utils-post-config/rbac.yaml
+++ b/gitops/applications/base/utils-post-config/rbac.yaml
@@ -11,7 +11,10 @@ rules:
     verbs: ["*"] 
   - apiGroups: ["apiextensions.k8s.io"]
     resources: ["customresourcedefinitions"]
-    verbs: ["*"]        
+    verbs: ["*"]
+  - apiGroups: [""]
+    resources: ["namespaces"]
+    verbs: ["*"]             
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
