--- a/gitops/argo-apps/base/gitlab-pre.yaml
+++ b/gitops/argo-apps/base/gitlab-pre.yaml
@@ -286,7 +286,19 @@ spec:
             value: "${ARGOCD_ENV_gitlab_gitlab_gitlab_externalservice_name}"
 
           - name: max_prepared_statements
-            value: "0"                       
+            value: "0"
+
+          - name: "sc_dbaas_gitrepo_tag"
+            value: "${ARGOCD_ENV_security_application_gitrepo_tag}"
+
+          - name: "sc_argocd_repo_url"
+            value: "${ARGOCD_ENV_argocd_repo_url}"
+
+          - name: "capi_cluster_name"
+            value: "${ARGOCD_ENV_utils_capi_capi_cluster_name}"                        
+
+          - name: "capi_cluster_namespace"
+            value: "${ARGOCD_ENV_utils_capi_capi_cluster_namespace}"                                   
 
     #praefect db
     - repoURL: ${ARGOCD_ENV_argocd_repo_url}
@@ -386,4 +398,16 @@ spec:
             value: "${ARGOCD_ENV_gitlab_gitlab_praefect_externalservice_name}"
 
           - name: max_prepared_statements
-            value: "0"                    
+            value: "0"
+
+          - name: "sc_dbaas_gitrepo_tag"
+            value: "${ARGOCD_ENV_security_application_gitrepo_tag}"
+
+          - name: "sc_argocd_repo_url"
+            value: "${ARGOCD_ENV_argocd_repo_url}"
+
+          - name: "capi_cluster_name"
+            value: "${ARGOCD_ENV_utils_capi_capi_cluster_name}"                        
+
+          - name: "capi_cluster_namespace"
+            value: "${ARGOCD_ENV_utils_capi_capi_cluster_namespace}"                                
