--- a/gitops/argo-apps/overlays/local/root/kustomization.yaml
+++ b/gitops/argo-apps/overlays/local/root/kustomization.yaml
@@ -20,10 +20,10 @@ resources:
   # - ../../../base/redis-operator.yaml
   - ../../../base/base-monitoring.yaml
   # xplane database config
-  #- ../../../base/xplane-provider-config.yaml
+  - ../../../base/xplane-provider-config.yaml
   # vault
-  #- ../../../base/vault.yaml
-  #- ../../../base/vault-post-config.yaml
+  - ../../../base/vault.yaml
+  - ../../../base/vault-post-config.yaml
   # dns-utils
   # - ../../../base/dns-utils.yaml
   # - ../../../base/dns-utils-post-config.yaml
