--- a/gitops/applications/base/utils-post-config/kustomization.yaml
+++ b/gitops/applications/base/utils-post-config/kustomization.yaml
@@ -3,7 +3,7 @@ kind: Kustomization
 resources:
   - rbac.yaml
   - crossplane-providers.yaml
-  - rook-ceph-objectstore-exporter.yaml
+#  - rook-ceph-objectstore-exporter.yaml
 
 secretGenerator:
   - name: terraformrc
