--- a/gitops/applications/overlays/rdbms_provider/private-dbaas/percona-db.yaml
+++ b/gitops/applications/overlays/rdbms_provider/private-dbaas/percona-db.yaml
@@ -98,7 +98,10 @@ spec:
                   value: "${ARGOCD_ENV_externalservice_name}"
 
                 - name: max_prepared_statements
-                  value: "0"               
+                  value: "0"
+
+                - name: expose_enable
+                  value: "true"               
                 
 
         destination:
