--- a/terraform/k8s/default-config/mojaloop-vars.yaml
+++ b/terraform/k8s/default-config/mojaloop-vars.yaml
@@ -9,7 +9,7 @@ ttk_test_currency3: CAD
 mcm_ingress_internal_lb: false
 mojaloop_ingress_internal_lb: true
 finance_portal_ingress_internal_lb: true
-ml_testing_toolkit_cli_chart_version: 16.0.0
+ml_testing_toolkit_cli_chart_version: 16.2.1-19686-ed3b103
 hub_provisioning_ttk_test_case_version: 17.0.6
 onboarding_collection_tag: 17.0.6
 onboarding_net_debit_cap: 0
