--- a/gitops/argo-apps/overlays/local/root/kustomization.yaml
+++ b/gitops/argo-apps/overlays/local/root/kustomization.yaml
@@ -16,10 +16,10 @@ resources:
   - ../../../base/cert-manager.yaml
   - ../../../base/capi.yaml
   - ../../../base/capi-post-config.yaml
-  #- ../../../base/consul.yaml
+  - ../../../base/storage.yaml
   # - ../../../base/percona-operator.yaml
   # - ../../../base/redis-operator.yaml
-  - ../../../base/base-monitoring.yaml
+  # - ../../../base/base-monitoring.yaml
   # xplane database config
   - ../../../base/xplane-provider-config.yaml
   # vault
