--- a/gitops/argo-apps/overlays/local/root/kustomization.yaml
+++ b/gitops/argo-apps/overlays/local/root/kustomization.yaml
@@ -14,8 +14,8 @@ resources:
   - ../../../base/istio.yaml
   - ../../../base/istio-gw.yaml
   - ../../../base/cert-manager.yaml
-  - ../../../base/capi.yaml
-  - ../../../base/capi-post-config.yaml
+  #- ../../../base/capi.yaml
+  #- ../../../base/capi-post-config.yaml
   - ../../../base/storage.yaml
   # - ../../../base/percona-operator.yaml
   # - ../../../base/redis-operator.yaml
