--- a/gitops/argo-apps/overlays/local/root/kustomization.yaml
+++ b/gitops/argo-apps/overlays/local/root/kustomization.yaml
@@ -16,7 +16,7 @@ resources:
   - ../../../base/cert-manager.yaml
   #- ../../../base/capi.yaml
   #- ../../../base/capi-post-config.yaml
-  - ../../../base/storage.yaml
+  #- ../../../base/storage.yaml
   # - ../../../base/percona-operator.yaml
   # - ../../../base/redis-operator.yaml
   # - ../../../base/base-monitoring.yaml
