--- a/gitops/argo-apps/overlays/local/root/kustomization.yaml
+++ b/gitops/argo-apps/overlays/local/root/kustomization.yaml
@@ -4,8 +4,8 @@ kind: Kustomization
 resources:
   # utils
   - ../../../base/argocd-helm.yaml
-  - ../../../base/rook-ceph.yaml
-  - ../../../base/rook-ceph-post-config.yaml
+  #- ../../../base/rook-ceph.yaml
+  #- ../../../base/rook-ceph-post-config.yaml
   - ../../../base/external-secrets.yaml
   - ../../../base/reflector.yaml
   - ../../../base/reloader.yaml
