--- a/gitops/argo-apps/base/storage.yaml
+++ b/gitops/argo-apps/base/storage.yaml
@@ -37,19 +37,33 @@ spec:
         name: envsubst
         env:
         - name: "aws_ebs_csi_driver_helm_version"
-          value: "${ARGOCD_ENV_storage_aws_provider_ebs_csi_driver_helm_version}"
+          value: "${ARGOCD_ENV_utils_storage_aws_provider_ebs_csi_driver_helm_version}"
 
         - name: "kubelet_dir_path"
-          value: "${ARGOCD_ENV_storage_aws_provider_csi_kubelet_dir_path"
+          value: "${ARGOCD_ENV_utils_storage_aws_provider_csi_kubelet_dir_path"
 
         - name: "csi_driver_replicas"
-          value: "${ARGOCD_ENV_storage_aws_provider_csi_driver_replicas}"
+          value: "${ARGOCD_ENV_utils_storage_aws_provider_csi_driver_replicas}"
 
         - name: "cluster_domain"
-          value: "${ARGOCD_ENV_cluster_domain}"
+          value: "${ARGOCD_ENV_utils_cluster_domain}"
 
-        - name: "storage_class_name"
-          value: "${ARGOCD_ENV_storage_storage_class_name}"
+        - name: "storage_namespace"
+          value: "${ARGOCD_ENV_utils_storage_namespace}"
+
+        - name: "block_storage_class_name"
+          value: "${ARGOCD_ENV_utils_storage_block_storage_class_name}"
+        
+        - name: "fs_storage_class_name"
+          value: "${ARGOCD_ENV_utils_storage_private_cloud_provider_fs_storage_class_name}"
+        
+        - name: "object_storage_class_name"
+          value: "${ARGOCD_ENV_utils_storage_private_cloud_provider_object_storage_class_name}"
+        
+        - name: "rook_ceph_helm_version"
+          value: "${ARGOCD_ENV_utils_storage_private_cloud_provider_helm_version}"
+        
+
 
 
 
