--- a/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/storage/ceph-external-values.yaml
+++ b/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/storage/ceph-external-values.yaml
@@ -1,5 +1,5 @@
 ---
-operatorNamespace: rook-ceph
+operatorNamespace: ${ARGOCD_ENV_storage_namespace}
 cephClusterSpec:
   external:
     enable: true
