--- a/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/storage/rook-ceph-namespace.yaml
+++ b/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/storage/rook-ceph-namespace.yaml
@@ -2,9 +2,4 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: rook-ceph
----
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: rook-ceph-external
+  name: ${ARGOCD_ENV_storage_namespace}
