--- a/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/storage/external-secrets.yaml
+++ b/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/storage/external-secrets.yaml
@@ -2,12 +2,12 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: ext-secret-sc
-  namespace: rook-ceph-external
+  namespace: ${ARGOCD_ENV_storage_namespace}
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
-  namespace: rook-ceph-external
+  namespace: ${ARGOCD_ENV_storage_namespace}
   name: eso-store-role
 rules:
   - apiGroups:
@@ -29,11 +29,11 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: eso-store-role-binding
-  namespace: rook-ceph-external
+  namespace: ${ARGOCD_ENV_storage_namespace}
 subjects:
   - kind: ServiceAccount
     name: ext-secret-sc
-    namespace: rook-ceph-external
+    namespace: ${ARGOCD_ENV_storage_namespace}
 roleRef:
   kind: Role
   name: eso-store-role
@@ -43,7 +43,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   name: viewer
-  namespace: rook-ceph-external
+  namespace: ${ARGOCD_ENV_storage_namespace}
 rules:
   - apiGroups:
       - ""
@@ -60,7 +60,7 @@ apiVersion: external-secrets.io/v1beta1
 kind: SecretStore
 metadata:
   name: sc-secret-store
-  namespace: rook-ceph-external
+  namespace: ${ARGOCD_ENV_storage_namespace}
 spec:
   provider:
     kubernetes:
@@ -78,7 +78,7 @@ apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
   name: sc-kubeconfig
-  namespace: rook-ceph-external
+  namespace: ${ARGOCD_ENV_storage_namespace}
 spec:
   refreshInterval: 1m
   secretStoreRef:
