--- a/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/storage/post-config/sync-ceph-secrets-job.yaml
+++ b/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/storage/post-config/sync-ceph-secrets-job.yaml
@@ -3,7 +3,7 @@ apiVersion: batch/v1
 kind: Job
 metadata:
   name: sync-rook-ceph-secrets
-  namespace: rook-ceph-external
+  namespace: ${ARGOCD_ENV_storage_namespace}
 spec:
   template:
     spec:
@@ -16,8 +16,8 @@ spec:
         - -c
         - |
           kubectl --kubeconfig=/etc/sc-cluster-kubeconfig/config get secret ceph-external-cluster-secret -n rook-ceph -o yaml \
-            | sed 's/namespace: rook-ceph$/namespace: rook-ceph-external/'  > /tmp/ceph-secrets.yaml && \
-          kubectl --namespace=rook-ceph-external apply -f /tmp/ceph-secrets.yaml
+            | sed 's/namespace: rook-ceph$/namespace: ${ARGOCD_ENV_storage_namespace}/'  > /tmp/ceph-secrets.yaml && \
+          kubectl --namespace=${ARGOCD_ENV_storage_namespace} apply -f /tmp/ceph-secrets.yaml
         volumeMounts:
         - name: sc-cluster-kubeconfig
           mountPath: /etc/sc-cluster-kubeconfig
