--- a/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/storage/rbac.yaml
+++ b/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/storage/rbac.yaml
@@ -3,13 +3,13 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: ceph-job-sa
-  namespace: rook-ceph-external
+  namespace: ${ARGOCD_ENV_storage_namespace}
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   name: ceph-job-role
-  namespace: rook-ceph-external
+  namespace: ${ARGOCD_ENV_storage_namespace}
 rules:
   - apiGroups: [""]
     resources: ["secrets", "configmaps", "namespaces"]
@@ -22,11 +22,11 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: ceph-job-rolebinding
-  namespace: rook-ceph-external
+  namespace: ${ARGOCD_ENV_storage_namespace}
 subjects:
   - kind: ServiceAccount
     name: ceph-job-sa
-    namespace: rook-ceph-external
+    namespace: ${ARGOCD_ENV_storage_namespace}
 roleRef:
   kind: Role
   name: ceph-job-role
