Argo ENVs for sc ceph

--- a/gitops/applications/base/sc-storage-post-config/rook-ceph-ext-secrets-job.yaml
+++ b/gitops/applications/base/sc-storage-post-config/rook-ceph-ext-secrets-job.yaml
@@ -29,7 +29,7 @@ spec:
             - -c
             - |
               # Additional env vars
-              NAMESPACE="rook-ceph"
+              NAMESPACE=${ARGOCD_ENV_rook_ceph_namespace}
               KUBECTL="kubectl"
               RGW_EXTERNAL_IP=$(cat /tmp/rgw-secret/RGW_EXTERNAL_IP)
               RGW_EXTERNAL_PORT=$(cat /tmp/rgw-secret/RGW_EXTERNAL_PORT)
