--- a/gitops/applications/base/sc-storage/ceph-objectstore-service.yaml
+++ b/gitops/applications/base/sc-storage/ceph-objectstore-service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: rook-rgw-external
-  namespace: rook-ceph
+  namespace: ${ARGOCD_ENV_rook_ceph_namespace}
   annotations:
     metallb.universe.tf/address-pool: production
   labels:
