--- a/gitops/argo-apps/overlays/local/storage-cluster/kustomization.yaml
+++ b/gitops/argo-apps/overlays/local/storage-cluster/kustomization.yaml
@@ -5,8 +5,8 @@ resources:
   # utils
   #- ../../../base/argocd-helm.yaml
   - ../../../base/metallb.yaml
-  - ../../../base/sc-rook-ceph.yaml
-  - ../../../base/sc-rook-ceph-post-config.yaml
+  - ../../../base/sc-storage.yaml
+  - ../../../base/sc-storage-post-config.yaml
   - ../../../base/cert-manager.yaml
   - ../../../base/percona-operator.yaml
   - ../../../base/base-monitoring.yaml
