rbd pool size as var

--- a/gitops/applications/base/sc-storage/rook-ceph-cluster-values.yaml
+++ b/gitops/applications/base/sc-storage/rook-ceph-cluster-values.yaml
@@ -28,7 +28,7 @@ cephBlockPools:
     spec:
       failureDomain: host
       replicated:
-        size: 3
+        size: ${ARGOCD_ENV_rook_ceph_rbd_pool_size}
     storageClass:
       enabled: true
       name: ceph-block
