update argocd components log levels

--- a/gitops/argo-apps/base/argocd-helm.yaml
+++ b/gitops/argo-apps/base/argocd-helm.yaml
@@ -433,6 +433,11 @@ spec:
               #https://argo-cd.readthedocs.io/en/stable/user-guide/diff-strategies/#mutation-webhooks
               controller.diff.server.side: "true"
 
+              server.log.level: info
+              reposerver.log.level: warn
+              controller.log.level: warn
+              applicationsetcontroller.log.level: info
+
             cmp:
               create: true
               plugins:
