--- a/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/capi/cluster-deploy.yaml
+++ b/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/capi/cluster-deploy.yaml
@@ -907,6 +907,9 @@ spec:
           securityContext:
             runAsNonRoot: true
             runAsUser: 999
+          envFrom:
+            - configMapRef:
+                name: plugin-env-vars
           volumeMounts:
             - mountPath: /var/run/argocd
               name: var-files
