--- a/gitops/argo-apps/base/argocd-helm.yaml
+++ b/gitops/argo-apps/base/argocd-helm.yaml
@@ -523,6 +523,9 @@ spec:
             #   requests:
             #     cpu: 250m
             #     memory: 512Mi
+            envFrom:
+              - configMapRef:
+                  name: plugin-env-vars
             env:
               - name: HELM_CACHE_HOME
                 value: /helm-working-dir
