--- a/gitops/argo-apps/overlays/local/root/kustomization.yaml
+++ b/gitops/argo-apps/overlays/local/root/kustomization.yaml
@@ -3,7 +3,7 @@ kind: Kustomization
 
 resources:
   # utils
-  - ../../../base/argocd-helm.yaml
+  # - ../../../base/argocd-helm.yaml
   - ../../../base/storage.yaml
   #- ../../../base/storage-post-config.yaml
   - ../../../base/external-secrets.yaml
