--- a/gitops/argo-apps/base/storage.yaml
+++ b/gitops/argo-apps/base/storage.yaml
@@ -30,7 +30,7 @@ spec:
     server: "https://kubernetes.default.svc"
     namespace: ${ARGOCD_ENV_utils_storage_namespace}
   source:
-    - repoURL: ${ARGOCD_ENV_argocd_repo_url}
+      repoURL: ${ARGOCD_ENV_argocd_repo_url}
       targetRevision: ${ARGOCD_ENV_utils_storage_application_gitrepo_tag}
       path: gitops/applications/overlays/cloud_provider/${ARGOCD_ENV_utils_storage_cloud_provider}/storage-provider/storage
       plugin:
