--- a/gitops/argo-apps/overlays/local/root/kustomization.yaml
+++ b/gitops/argo-apps/overlays/local/root/kustomization.yaml
@@ -23,8 +23,8 @@ resources:
   # xplane database config
   #- ../../../base/xplane-provider-config.yaml
   # vault
-  #- ../../../base/vault.yaml
-  #- ../../../base/vault-post-config.yaml
+  - ../../../base/vault.yaml
+  - ../../../base/vault-post-config.yaml
   # dns-utils
   # - ../../../base/dns-utils.yaml
   # - ../../../base/dns-utils-post-config.yaml
