add log level config vars for other argocd services

--- a/gitops/argo-apps/base/argocd-helm.yaml
+++ b/gitops/argo-apps/base/argocd-helm.yaml
@@ -434,9 +434,9 @@ spec:
               controller.diff.server.side: "true"
 
               server.log.level: ${ARGOCD_ENV_utils_argocd_helm_server_log_level}
-              reposerver.log.level: warn
-              controller.log.level: warn
-              applicationsetcontroller.log.level: info
+              reposerver.log.level: ${ARGOCD_ENV_utils_argocd_helm_reposerver_log_level}
+              controller.log.level: ${ARGOCD_ENV_utils_argocd_helm_controller_log_level}
+              applicationsetcontroller.log.level: ${ARGOCD_ENV_utils_argocd_helm_applicationsetcontroller_log_level}
 
             cmp:
               create: true
