--- a/terraform/ccnew/default-config/common-vars.yaml
+++ b/terraform/ccnew/default-config/common-vars.yaml
@@ -296,3 +296,6 @@ rook_ceph_aws_ebs_csi_driver_helm_version: "2.39.0"
 
 # argocd 
 argocd_server_log_level: "info"
+argocd_reposerver_log_level: "warn"
+argocd_controller_log_level: "warn"
+argocd_applicationsetcontroller_log_level: "info"
